--- a/apps/product/package.json
+++ b/apps/product/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "next": "13.5.6",
+    "common-components": "workspace:*",
+    "common-styles": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5",
